@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-22T16:00:44Z",
+  "timestamp" : "2023-07-25T16:02:39Z",
   "count_outdated" : 201,
   "uniques_outdated" : 76,
-  "count" : 208,
-  "uniques" : 78,
+  "count" : 209,
+  "uniques" : 79,
   "views" : [
     {
       "timestamp": "2023-07-17T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 6,
       "count_minmax": [ 6, 6 ],
       "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
